--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: null
   cached_network_image: ^3.1.0
   connectivity: null
+  flutter_staggered_grid_view: ^0.4.1
 
 dev_dependencies:
   flutter_test:
